# app-07

./: .env.example  .gitignore  Makefile  README.md  data.json  netlify.toml  render.yaml
.github/workflows/: cd-app-07-loteria-client.yml  cd-app-07-loteria-service.yml  ci-app-07-loteria-client.yml
_process/: index.html
calibration_artifacts/: calibration_metadata.json
client/: .env.example  Dockerfile  Dockerfile.eb  Makefile  README.md  components.json  default.conf.template  eslint.config.mjs  netlify.toml  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
client/app/types/: api.ts
client/scripts/: copy-lint.js  fetch-mega-sena.js
client/tests/: composables.test.ts
openspec/specs/: Untitled  (+1 more)
service/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
service/data/: mega-sena.json
service/docs/: agent.md
service/src/service/: __init__.py  config.py  logging_config.py  main.py  token_counters.py
service/src/service/agents/: __init__.py
service/src/service/api/: __init__.py  calibration.py  correlations.py  dataset.py  draws.py  errors.py  health.py  oracle.py  predictions.py  readiness.py  statistics.py  sync.py  tickets.py
service/src/service/correlation/: __init__.py  alignment.py  compute.py  loader.py  metrics.py  models.py  registry.py
service/src/service/engine/: __init__.py  baseline.py  calibration.py  ensemble.py  features.py  learned.py  models.py
service/src/service/ingestion/: __init__.py  loader.py  models.py
service/src/service/llm/: client.py
service/src/service/models/: tickets.py
service/src/service/oracle/: __init__.py  agent.py  bias.py  catalog.py  guard.py  models.py  prompt.py  tools.py
service/src/service/prompts/: ticket_scan.py
service/src/service/statistics/: __init__.py  base.py  cooccurrence.py  frequency.py  gaps.py  order.py  pi_alignment.py  structural.py
service/src/service/store/: __init__.py  predictions.py
service/src/service/sync/: __init__.py  fetcher.py  merger.py  task.py  writer.py
service/src/service/tools/: __init__.py
service/tests/: conftest.py  test_admin_sync.py  test_agent.py  test_api.py  test_correlation.py  test_engine.py  test_ingestion.py  test_oracle_agent.py  test_oracle_bias.py  test_oracle_catalog.py  test_statistics.py  test_statistics_properties.py  test_sync.py  test_tickets.py
store/: predictions.jsonl
(+148 files in other folders)
